# server

./: CMakeLists.txt  README.md  main.cpp
lib/: dbsingleton.cpp  dbsingleton.h  handlers.cpp  handlers.h  server.cpp  server.h
tests/: CMakeLists.txt  main.cpp  testhandlers.cpp  testhandlers.h
